--- a/app/src/main/res/layout/activity_bt_message.xml
+++ b/app/src/main/res/layout/activity_bt_message.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <ListView
-        android:id="@+id/text_message"
+        android:id="@+id/card_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="message"
