--- a/app/src/main/res/layout/activity_bt_message.xml
+++ b/app/src/main/res/layout/activity_bt_message.xml
@@ -6,26 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".BtMessageActivity">
 
-    <EditText
-        android:id="@+id/edit_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"/>
 
     <ListView
         android:id="@+id/card_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="message"
-        app:layout_constraintTop_toBottomOf="@id/send_button"/>
-
-    <Button
-        android:id="@+id/send_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send"
-        app:layout_constraintTop_toBottomOf="@id/edit_message"/>
-
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 
