--- a/app/src/main/res/layout/activity_bt_message.xml
+++ b/app/src/main/res/layout/activity_bt_message.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BtMessageActivity">
+    tools:context=".BtMessageActivity"
+    android:background="@drawable/bg">
 
 
     <TextView
