--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/bg">
 
-    <Button
-        android:id="@+id/hello"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <LinearLayout
+       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:orientation="vertical"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintRight_toRightOf="parent"
+
+       >
+
+       <Button
+           android:id="@+id/btnGallery"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="Gallery"/>
+       <Button
+           android:id="@+id/btnBluetooth"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="Bluetooth"/>
+   </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
